# fast-api

./: .cursorrules  .env.example  .gitignore  API_DOCUMENTATION.md  PROJECT_PLAN.md  README.md  TESTING.md  alembic.ini  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 80bc44782cef_create_users_table.py  83afde6d9743_initial_migration_create_users_and_.py
app/: main.py
app/api/v1/: router.py
app/core/: config.py  database.py  security.py
app/features/auth/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
app/models/: __init__.py  auth.py  user.py
app/shared/: dependencies.py
scripts/: run_tests.py
tests/: conftest.py  test_performance.py
tests/e2e/: test_api_flows.py
tests/integration/: test_auth_integration.py
tests/unit/: test_auth.py
tests/utils/: performance.py
